# backend-diplom

./: pyproject.toml
src/: alembic.ini  main.py
src/api/v1/: binding.py  cities.py  companies.py  countries.py  customers_accounts.py  customers_data.py  editions.py  orders.py  phones.py  products.py  products_types.py  products_vendors.py  sources.py  states.py  streets.py  zip_codes.py
src/controllers/: cities.py  companies.py  countries.py  customers_accounts.py  customers_data.py  editions.py  orders.py  phones.py  products.py  products_types.py  products_vendors.py  sources.py  states.py  streets.py  zip_codes.py
src/db/migrations/: env.py
src/db/mixins/: created_at.py
src/db/repositories/: base.py  cities.py  companies.py  countries.py  customers_accounts.py  customers_accounts_relations.py  customers_data.py  (+10 more)
src/di/: dependencies.py  factory.py  markers.py  providers.py
src/dto/: base.py  cities.py  companies.py  countries.py  customers_accounts.py  customers_data.py  customers_emails.py  editions.py  invalid_customers_emails.py  keys.py  orders.py  orders_types.py  phones.py  products.py  products_groups.py  products_types.py  products_vendors.py  sources.py  states.py  streets.py  unsubscribed.py  zip_codes.py
src/services/: cities.py  companies.py  countries.py  customers_accounts.py  customers_data.py  editions.py  orders.py  phones.py  products.py  products_types.py  products_vendors.py  sources.py  states.py  streets.py  zip_codes.py
src/settings/: postgres.py
src/utils/: folders_path.py  temp_files.py
static/templates/: order.docx
(+43 files in other folders)
