[tool.poetry]
name = "diplommm"
version = "0.1.0"
description = ""
authors = ["MarrRoss <marina.pixie2014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
SQLAlchemy = "^2.0.12"
asyncpg = "^0.27.0"
alembic = "^1.10.4"
install = "^1.3.5"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
uvicorn = "^0.22.0"
pyfa-converter = "^1.0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
